<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grayBg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="40dp"
        android:gravity="center">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_success"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textBlack"
            android:layout_marginTop="10dp"
            android:textSize="30dp"
            android:text="@string/sendSuccess"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textBlack"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_large"
            android:text="@string/send_success_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_backhome"
            android:text="@string/title_home"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>