<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imv_logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_big_logo" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/imv_logo">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_user"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:hint="@string/Login_Phone"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/textGray"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_user"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grayLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/view_username">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_lock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:hint="@string/Login_Pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/textGray"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_lock"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grayLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="46dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Login_Login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/view_password" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnForgot"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Login_ChangePass"
        android:textAllCaps="false"
        android:textColor="@color/textGray"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
